src/test/run-pass/item-name-overload.rs



// -*- rust -*-
mod foo {
    #[legacy_exports];
    fn baz() { }
}

mod bar {
    #[legacy_exports];
    fn baz() { }
}

fn main() { }
