src/test/compile-fail/attr-dangling-in-fn.rs
// error-pattern:expected item

fn f() {
  #[foo = "bar"]
}

fn main() {
}
